--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "highlight.js": "^11.8.0",
     "marked": "^9.1.2",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^24.10.0",
     "zod": "^3.22.4"
   },
